# web3dgame

./: .gitignore  CMakeLists.txt  DOCUMENTAZIONE.md  README.md  REGOLE.md  SETUP_EMSCRIPTEN.md  package-lock.json  package.json
src/: main.cpp
src/engine/: CMakeLists.txt
src/engine/core/: engine.cpp  engine.hpp
src/engine/math/: math.hpp
src/engine/renderer/: renderer.cpp  renderer.hpp
src/game/: CMakeLists.txt  game.cpp  game.hpp
src/net/: CMakeLists.txt  networking.cpp  networking.hpp
web/: index.html  shell.html  web3dgame.data  web3dgame.html
